# free-game-notifier

./: .drone.yml  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  pyproject.toml
.github/workflows/: image.yml
docker/: Dockerfile  app.py  docker-compose.yml  entrypoint.sh
example/: README.md  docker-compose.yml  settings.yml
free_game_notifier/: __init__.py  app.py  cache.py  config.py  factory.py  icons.py  logger.py  settings.py
free_game_notifier/abc/: feed.py  item.py  notifier.py
free_game_notifier/feed/: __init__.py  steam.py
free_game_notifier/notifier/: slack.py
steam_free_notifier/: __init__.py  __main__.py  app.py  boolean_utils.py  cache.py  factory.py  icons.py  item.py  logger.py  settings.py
steam_free_notifier/abc/: feed.py  item.py  notifier.py
steam_free_notifier/feed/: steam.py
steam_free_notifier/notifier/: __init__.py  slack.py
steam_free_notifier/steam/: feed.py  item.py
tests/: conftest.py  feed.xml  rss.xml  test_steam_free_notifier.py
tests/cache/: test_cache.py
tests/icons/: conftest.py  test_icons.py
tests/steam/: conftest.py  test_formatting.py  test_ignore.py  test_parse_good_through.py  test_reviews.py
tests/steam/files/: last_light.html  solitairica.html  test-feed.xml
