[tool.poetry]
name = "free-game-notifier"
version = "1.3.0"
description = ""
authors = ["Tim McFadden <mtik00@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.2"
requests = "^2.25.1"
pendulum = "^2.1.2"
typer = "^0.3.2"
PyYAML = "^5.3.1"
Jinja2 = "^2.11.2"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
pre-commit = "^2.9.3"
pylint = "^2.6.0"
ipdb = "^0.13.4"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
