[tool.poetry]
name = "free-game-notifier"
version = "1.7.0"
description = ""
authors = ["Tim McFadden <mtik00@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
requests = "^2.28.1"
pendulum = "^2.1.2"
typer = "^0.7.0"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^23.1a1"
pre-commit = "^2.20.0"
pylint = "^2.15.9"
ipdb = "^0.13.11"
ipython = "^8.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
